<resources>
    <string name="nav_notes">Notes</string>
    <string name="nav_archive">Archive</string>
    <string name="nav_deleted">Deleted</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_tags">Tags</string>
    <string name="nav_all_notes">All Notes</string>
    <string name="nav_notebooks">Notebooks</string>
    <string name="nav_your_notebooks">Your Notebooks</string>
    <string name="preferences_header_general">General</string>
    <string name="preferences_theme_mode">Theme mode</string>
    <string name="preferences_theme_mode_dark">Dark</string>
    <string name="preferences_theme_mode_light">Light</string>
    <string name="preferences_theme_mode_system">Follow system</string>
    <string name="preferences_dark_theme_mode">Dark theme mode</string>
    <string name="preferences_theme_dark_mode_standard">Standard</string>
    <string name="preferences_theme_dark_mode_black">Black</string>
    <string name="preferences_color_scheme">Color scheme</string>
    <string name="preferences_color_scheme_blue">Blue</string>
    <string name="preferences_color_scheme_pink">Pink</string>
    <string name="preferences_color_scheme_green">Green</string>
    <string name="preferences_color_scheme_orange">Orange</string>
    <string name="preferences_color_scheme_purple">Purple</string>
    <string name="preferences_color_scheme_yellow">Yellow</string>
    <string name="preferences_color_scheme_red">Red</string>
    <string name="preferences_color_scheme_system">Follow system</string>
    <string name="preferences_header_view">View</string>
    <string name="preferences_header_view_notebook">Notebook</string>
    <string name="preferences_layout_mode">Layout mode</string>
    <string name="preferences_layout_mode_grid">Grid</string>
    <string name="preferences_layout_mode_list">List</string>
    <string name="preferences_sort_method">Sort by</string>
    <string name="preferences_sort_method_title_asc">Title (ascending)</string>
    <string name="preferences_sort_method_title_desc">Title (descending)</string>
    <string name="preferences_sort_method_created_asc">Date created (ascending)</string>
    <string name="preferences_sort_method_created_desc">Date created (descending)</string>
    <string name="preferences_sort_method_modified_asc">Date modified (ascending)</string>
    <string name="preferences_sort_method_modified_desc">Date modified (descending)</string>
    <string name="preferences_header_view_note_content">Note content</string>
    <string name="preferences_font_size">Text editor/view font size</string>
    <string name="preferences_font_size_default">Default</string>
    <string name="preferences_font_size_ten">10</string>
    <string name="preferences_font_size_fifteen">15</string>
    <string name="preferences_font_size_twenty">20</string>
    <string name="preferences_font_size_twentyfive">25</string>
    <string name="preferences_font_size_thirty">30</string>
    <string name="preferences_font_size_thirtyfive">35</string>
    <string name="preferences_font_size_forty">40</string>
    <string name="preferences_font_size_fortyfive">45</string>
    <string name="preferences_font_size_fifty">50</string>
    <string name="preferences_show_fab_change_mode">Edit/View note button position</string>
    <string name="preferences_fab">Floating button</string>
    <string name="preferences_top_bar">Top bar</string>
    <string name="preferences_show_date">Show date created/modified</string>
    <string name="preferences_date_format">Date format</string>
    <string name="preferences_time_format">Time format</string>
    <string name="preferences_header_other">Other</string>
    <string name="preferences_open_media_in">Open media in</string>
    <string name="preferences_open_media_in_internal">Internal player</string>
    <string name="preferences_open_media_in_external">External player</string>
    <string name="preferences_group_notes_without_notebook">Group notes which are not in any notebook</string>
    <string name="preferences_move_checked_items">Move (un)checked items in the lists</string>
    <string name="preferences_note_deletion_time">Delete notes in bin</string>
    <string name="preferences_note_deletion_time_instantly">Instantly</string>
    <string name="preferences_note_deletion_time_week">After 7 days</string>
    <string name="preferences_note_deletion_time_two_weeks">After 14 days</string>
    <string name="preferences_note_deletion_time_month">After 30 days</string>
    <string name="preferences_header_backup">Backup</string>
    <string name="preferences_create_backup">Create a backup</string>
    <string name="preferences_create_backup_subtext">Export all notes to a backup file.</string>
    <string name="preferences_restore">Restore</string>
    <string name="preferences_restore_subtext">Load notes from a backup file.</string>
    <string name="preferences_backup_strategy">Backup strategy for attachments</string>
    <string name="preferences_backup_strategy_include_files">Backup everything</string>
    <string name="preferences_backup_strategy_keep_info">Only backup description and local path</string>
    <string name="preferences_backup_strategy_keep_nothing">Do not backup attachments</string>
    <string name="preferences_header_syncing">Syncing</string>
    <string name="preferences_go_to_sync_settings">Go to sync settings</string>
    <string name="preferences_currently_syncing_with">Currently syncing with %s</string>
    <string name="preferences_currently_not_syncing">Currently not syncing</string>
    <string name="preferences_cloud_service">Syncing service</string>
    <string name="preferences_cloud_service_disabled">Disabled</string>
    <string name="preferences_cloud_service_nextcloud">Nextcloud</string>
    <string name="preferences_sync_experimental_warning">Syncing functionality is currently experimental.\nYou may encounter bugs.</string>
    <string name="preferences_nextcloud_limited_features">Keep in mind Nextcloud Notes does not support features such as tags, attachments, reminders and more.</string>
    <string name="preferences_nextcloud_account">Nextcloud account</string>
    <string name="preferences_nextcloud_instance_url">Nextcloud instance URL</string>
    <string name="preferences_nextcloud_set_your_credentials">Set your credentials</string>
    <string name="preferences_nextcloud_set_server_url">Set the server\'s URL</string>
    <string name="preferences_sync_on_wifi">Wi-Fi</string>
    <string name="preferences_sync_on_wifi_data">Wi-Fi or Data</string>
    <string name="preferences_sync_when_on">Sync when on</string>
    <string name="preferences_background_sync">Background syncing</string>
    <string name="preferences_background_sync_enabled">Enabled</string>
    <string name="preferences_background_sync_disabled">Disabled</string>
    <string name="preferences_new_notes_synchronizable">New notes synchronizable</string>
    <string name="about_version">Version</string>
    <string name="about_website">Website</string>
    <string name="about_developer">Developer</string>
    <string name="about_contribute">Contribute</string>
    <string name="about_support">Support</string>
    <string name="about_support_subtext">Creating and maintaining open-source projects is time-consuming and provides
        no profit.\nBuy the developers a beer!
    </string>
    <string name="about_libraries">Libraries</string>
    <string name="about_libraries_subtext">View third-party libraries and licenses.</string>
    <string name="default_string">Default</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Okay</string>
    <string name="indicator_notes_empty">Your notes will appear here.</string>
    <string name="indicator_untitled">Untitled</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done!</string>
    <string name="action_delete_permanently">Delete permanently</string>
    <string name="action_select_all">Select All</string>
    <string name="action_create_list">Create a list</string>
    <string name="action_show_hidden_notes">Show hidden notes</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_export">Export</string>
    <string name="action_hide">Hide</string>
    <string name="action_show">Show</string>
    <string name="action_archive">Archive</string>
    <string name="action_change_mode">Edit/View mode</string>
    <string name="action_pin">Pin</string>
    <string name="action_unpin">Unpin</string>
    <string name="action_restore">Restore</string>
    <string name="action_share">Share</string>
    <string name="action_pin_unpin">Pin / Unpin</string>
    <string name="action_move_to">Move to…</string>
    <string name="action_duplicate">Duplicate</string>
    <string name="action_select_more">Select more…</string>
    <string name="action_compact_preview">Compact preview</string>
    <string name="action_full_preview">Full preview</string>
    <string name="attachments_edit_description">Edit description</string>
    <string name="attachments_hint_description">Attachment description</string>
    <string name="action_record_audio">Record audio</string>
    <string name="indicator_recording">Recording (%1$s)</string>
    <string name="action_attach_files">Attach files</string>
    <string name="action_take_photo">Take a photo</string>
    <string name="indicator_recorded_clip">Recorded Clip</string>
    <string name="default_notebook">Other</string>
    <string name="notebooks_new_notebook">New notebook</string>
    <string name="notebooks_hint_name">Notebook name</string>
    <string name="notebooks_unassigned">No Notebook</string>
    <string name="indicator_notebook_empty">You have no notebooks.</string>
    <string name="action_create_notebook">Create a notebook</string>
    <string name="action_rename_notebook">Rename notebook</string>
    <string name="action_new_notebook">New notebook</string>
    <string name="indicator_notebook_already_exists">Notebook with name %1$s already exists.</string>
    <string name="indicator_archive_empty">Your archived notes will appear here.</string>
    <string name="action_empty_bin">Empty bin</string>
    <string name="empty_bin_warning_title">Are you sure?</string>
    <string name="empty_bin_warning_text">All deleted notes will be lost.</string>
    <string name="indicator_deleted_note_cannot_be_edited">Notes inside the bin cannot be edited.</string>
    <string name="indicator_deleted_empty">Your deleted notes will appear here for %1$d days.</string>
    <string name="indicator_bin_disabled">Notes are set to be deleted instantly.\nYou can change this at Settings.</string>
    <string name="indicator_bin_forever">Notes are set to never be deleted.\nYou can change this at Settings.</string>
    <string name="indicator_deleted_notes_permanently">Deleted notes permanently.</string>
    <string name="reminders">Reminders</string>
    <string name="action_search">Search</string>
    <string name="action_convert_to_list">Convert to list</string>
    <string name="action_do_not_sync">Do not sync</string>
    <string name="action_change_color">Change color</string>
    <string name="action_enable_markdown">Enable markdown</string>
    <string name="action_insert_bold_text">Insert bold markdown</string>
    <string name="action_insert_italics">Insert italics markdown</string>
    <string name="action_insert_strikethrough">Insert strikethrough markdown</string>
    <string name="action_insert_heading">Insert heading markdown</string>
    <string name="action_insert_quote">Insert quotation markdown</string>
    <string name="action_insert_code">Insert code markdown</string>
</resources>