<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_pin_note"
            android:icon="@drawable/ic_pin"
            android:title="@string/action_pin"
            android:visible="false"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_view_reminders"
            android:icon="@drawable/ic_bell"
            android:title="@string/reminders"
            android:visible="false"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_restore_note"
            android:title="@string/action_restore"
            android:icon="@drawable/ic_restore"
            android:visible="false"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_delete_permanently_note"
            android:title="@string/action_delete_permanently"
            android:visible="false"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_convert_note"
            android:title="@string/action_convert_to_list"
            android:visible="false"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_archive_note"
            android:title="@string/action_archive"
            android:visible="false"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_delete_note"
            android:title="@string/action_delete"
            android:visible="false"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_hide_note"
            android:title="@string/action_hide"
            android:checkable="true"
            android:checked="false"
            android:visible="false"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_do_not_sync"
            android:title="@string/action_do_not_sync"
            android:checkable="true"
            android:checked="false"
            android:visible="false"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_change_color"
            android:title="@string/action_change_color"
            android:visible="false"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_enable_disable_markdown"
            android:title="@string/action_enable_markdown"
            android:visible="false"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_attach_file"
            android:title="@string/action_attach_files"
            android:visible="false"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_record_audio"
            android:title="@string/action_record_audio"
            android:visible="false"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_take_photo"
            android:title="@string/action_take_photo"
            android:visible="false"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_view_tags"
            android:title="@string/nav_tags"
            android:visible="false"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_export_note"
            android:title="@string/action_export"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_share"
            android:title="@string/action_share"
            app:showAsAction="never"/>
</menu>