<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:title="@string/preferences_sort_method"
            android:icon="@drawable/ic_sort"
            app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/action_sort_name_asc"
                        android:title="@string/preferences_sort_method_title_asc"/>
                <item
                        android:id="@+id/action_sort_name_desc"
                        android:title="@string/preferences_sort_method_title_desc"/>
                <item
                        android:id="@+id/action_sort_created_asc"
                        android:title="@string/preferences_sort_method_created_asc"/>
                <item
                        android:id="@+id/action_sort_created_desc"
                        android:title="@string/preferences_sort_method_created_desc"/>
                <item
                        android:id="@+id/action_sort_modified_asc"
                        android:title="@string/preferences_sort_method_modified_asc"/>
                <item
                        android:id="@+id/action_sort_modified_desc"
                        android:title="@string/preferences_sort_method_modified_desc"/>
            </group>
        </menu>
    </item>
    <item
            android:id="@+id/action_layout_mode"
            android:title="@string/preferences_layout_mode"
            android:visible="false"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_search"
            android:title="@string/action_search"
            android:icon="@drawable/ic_search"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_show_hidden_notes"
            android:title="@string/action_show_hidden_notes"
            android:checkable="true"
            android:checked="false"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_select_all"
            android:title="@string/action_select_all"
            app:showAsAction="never"/>
</menu>