<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_unarchive"
            android:title="@string/action_unarchive"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_delete_selected"
            android:title="@string/action_delete"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_hide_selected"
            android:title="@string/action_hide"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_export_selected"
            android:title="@string/action_export"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_select_all"
            android:title="@string/action_select_all"
            app:showAsAction="never"/>
</menu>